--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=interior
+
+server.port=8080
+spring.data.mongodb.uri=mongodb+srv://user:DUo7qZZELM8WUbwW@cluster0.2jqaymd.mongodb.net/email?retryWrites=true&w=majority&appName=Cluster0
+
+
+spring.mvc.cors.allowed-origins=https://interior-design-8ipb.onrender.com/
+spring.mvc.cors.allowed-methods=GET,POST,DELETE,PUT,OPTIONS
+spring.mvc.cors.allowed-headers=*
+spring.mvc.cors.allow-credentials=true
