--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=interior
 
 server.port=8080
-spring.data.mongodb.uri=mongodb+srv://user:DUo7qZZELM8WUbwW@cluster0.2jqaymd.mongodb.net/email?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb+srv://user:DUo7qZZELM8WUbwW@cluster0.2jqaymd.mongodb.net/interior?retryWrites=true&w=majority&appName=Cluster0
 
 
 spring.mvc.cors.allowed-origins=https://interior-design-8ipb.onrender.com/
